# xdpd

./: .gitignore  .gitmodules  CHANGES  Makefile.am  README  README-cli.md  README-conf-file.md  README-drivers.md  README-node-orchestrator.md  README-ofconfig.md  README-rest.md  README_DPDK  REST_README.md  VERSION  autogen.sh  configure.ac
doc/: .gitignore  Makefile.am  doxyfile.conf  doxyfile.conf.in  gnu-linux-dpdk-ryu.cert  gnu-linux-ryu.cert
libs/: Makefile.am  compile_autotools_pkg.sh  compile_dpdk.sh
src/xdpd/: .doxygen.dox  .gitignore  .groups.dox  Makefile.am  cmm.cc  hal  xdpd.cc  xdpd.h
src/xdpd/common/: Makefile.am  cdaemon.cc  cdaemon.h  common.h  cparam.cc  cparam.h  cparams.cc  cparams.h  cpipe.cc  cpipe.h  csocket.cc  csocket.h  csocket_strings.h  cunixenv.cc  cunixenv.h  exception.h  logging.cc  logging.h
src/xdpd/common/utils/: Makefile.am  c_logger.c  c_logger.h
src/xdpd/drivers/: README  README-0.4-port  README-0.4-port.md  README-0.5-port  README-0.5-port.md
src/xdpd/drivers/example/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/drivers/example/src/: Makefile.am
src/xdpd/drivers/gnu_linux/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/drivers/gnu_linux/config/: pktclassifier.m4  vlan.m4
src/xdpd/drivers/gnu_linux/src/: Makefile.am  bg_taskmanager.cc  bg_taskmanager.h  c_logger.h  config.cc  config.h
src/xdpd/drivers/gnu_linux_dpdk/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/drivers/gnu_linux_dpdk/src/: Makefile.am  bg_taskmanager.cc  bg_taskmanager.h  c_logger.c  c_logger.h  config.cc  config.h
src/xdpd/drivers/netfpga10g/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/drivers/netfpga10g/config/: pktclassifier.m4
src/xdpd/drivers/netfpga10g/src/: Makefile.am  bg_taskmanager.cc  config.cc  config.h
src/xdpd/fwd-modules/: Makefile.am
src/xdpd/fwd-modules/example/: COPYRIGHT  README  configure.ac
src/xdpd/fwd-modules/example/src/: Makefile.am
src/xdpd/fwd-modules/gnu_linux/: Makefile.am  README  bg_taskmanager.c  configure.ac  ls_internal_state.h
src/xdpd/fwd-modules/gnu_linux/afa-imp/: forwarding_module.c
src/xdpd/fwd-modules/gnu_linux/config/: pktclassifier.m4
src/xdpd/fwd-modules/gnu_linux/io/: bufferpool.cc  bufferpool.h  bufferpool_c_wrapper.cc  bufferpool_c_wrapper.h  datapacket_storage.cc  datapacket_storage.h  datapacket_storage_c_wrapper.h  datapacketx86.cc  datapacketx86.h  datapacketx86_c_wrapper.cc  iface_utils.cc  iface_utils.h  iomanager.cc  iomanager.h  iomanager_c_wrapper.cc
src/xdpd/fwd-modules/gnu_linux/pipeline-imp/: packet.c  platform_hooks_of12.cc
src/xdpd/fwd-modules/gnu_linux/processing/: processingmanager.cc
src/xdpd/fwd-modules/gnu_linux/src/: Makefile.am  bg_taskmanager.c  bg_taskmanager.cc  bg_taskmanager.h  config.c  config.cc  config.h
src/xdpd/fwd-modules/gnu_linux/test/: Makefile.am
src/xdpd/fwd-modules/gnu_linux/util/: Makefile.am  ringbuffer.cc
src/xdpd/fwd-modules/gnu_linux_dpdk/: AUTHORS  Makefile.am  configure.ac
src/xdpd/fwd-modules/gnu_linux_dpdk/src/: Makefile.am  bg_taskmanager.cc  config.h
src/xdpd/fwd-modules/netfpga10g/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/fwd-modules/netfpga10g/src/: Makefile.am  bg_taskmanager.c  bg_taskmanager.cc  config.cc  config.h
src/xdpd/fwd-modules/octeon5650/: Makefile.am
src/xdpd/management/: Makefile.am  cxmpmsg.cc  cxmpmsg.h  device_manager.cc  device_manager.h  monitoring_manager.cc  monitoring_manager.h  nf_port_manager.cc  nf_port_manager.h  pex_manager.cc  pex_manager.h  plugin_manager.cc  plugin_manager.h  port.cc  port.h  port_manager.cc  port_manager.h  switch_manager.cc  switch_manager.h  system_manager.cc  system_manager.h  xdpd_manager.h
src/xdpd/management/adapter/cli/: Makefile.am  default-cli.cfg-sample  xdpd_cli.cc  xdpd_cli.h
src/xdpd/management/adapter/qmf/: Makefile.am  qmfagent.cc  qmfagent.h
src/xdpd/management/plugins/: Makefile.am  README  plugin_manager_loader.cc
src/xdpd/management/plugins/cli/: Makefile.am  xdpd_cli.cc  xdpd_cli.h
src/xdpd/management/plugins/config/: Makefile.am  Plugin.am  config.cc  config.h  example.cfg  example2.cfg  example_complex.cfg  example_ssl.cfg  root_scope.cc  root_scope.h  scope.cc  scope.h  test.cfg  test2.cfg  xdpd.conf
src/xdpd/management/plugins/dbus/: Makefile.am  dbusconnection.cc  dbusconnection.h  dbuserror.cc  dbuserror.h  dbusmod.cc  dbusmod.h
src/xdpd/management/plugins/example/: Makefile.am  Plugin.am  example.cc  example.h  example_plugin.cc  example_plugin.h
src/xdpd/management/plugins/node_orchestrator/: LSI.cc  LSI.h  Makefile.am  Plugin.am  example.cfg  message_handler.cc  message_handler.h  node_orchestrator.cc  node_orchestrator.h  orchestrator_constants.h  server.cc  server.h  sockutils.c  sockutils.h
src/xdpd/management/plugins/python/: Makefile.am  xdpdmodule.cc  xdpdmodule.h
src/xdpd/management/plugins/qmf/: Makefile.am  Plugin.am  qmfagent.cc  qmfagent.h
src/xdpd/management/plugins/rest/: Makefile.am  Plugin.am  common-controllers.h  controllers.cc  controllers.h  delete-controllers.h  endpoints.cpp  rest.cc  (+10 more)
src/xdpd/management/snapshots/: Makefile.am  flow_entry_snapshot.cc  flow_entry_snapshot.h  group_mod_snapshot.cc  group_mod_snapshot.h  group_table_snapshot.cc  group_table_snapshot.h  port_snapshot.cc  port_snapshot.h  switch_snapshot.cc  switch_snapshot.h
src/xdpd/openflow/: Makefile.am  endianness_translation_utils.h  of_endpoint.cc  of_endpoint.h  openflow_switch.cc  openflow_switch.h
src/xdpd/openflow/openflow10/: Makefile.am  of10_endpoint.cc  of10_endpoint.h  of10_translation_utils.cc  of10_translation_utils.h  openflow10_switch.cc  openflow10_switch.h
src/xdpd/openflow/openflow12/: Makefile.am  of12_endpoint.cc  of12_endpoint.h  of12_translation_utils.cc  of12_translation_utils.h  openflow12_switch.cc  openflow12_switch.h
src/xdpd/openflow/openflow13/: Makefile.am  of13_endpoint.cc  of13_endpoint.h  of13_translation_utils.cc  of13_translation_utils.h  openflow13_switch.cc  openflow13_switch.h
src/xdpd/openflow/pirl/: Makefile.am  pirl.cc  pirl.h  pirl_config.h
(+835 files in other folders)
