MAINTAINERCLEANFILES = Makefile.in

#RTE_HOME=${HOME}/Arbeitsfläche/Intel/DPDK
#export RTE_SDK=${RTE_HOME}/1.3.0_127/DPDK
#export RTE_TARGET=x86_64-default-linuxapp-gcc

#RTE_DIR=/home/andreas/Arbeitsfläche/Intel/DPDK/1.3.0_127/DPDK/x86_64-default-linuxapp-gcc

noinst_LTLIBRARIES = libhal_x86dpdk.la

library_includedir=$(includedir)
include_HEADERS= 

libhal_x86dpdk_la_SOURCES = hal_x86dpdk.c  platform_empty_actions.c  platform_empty_packet_matches.c

library_include_HEADERS=


