MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = hal-imp pipeline-imp#Add more here... 

noinst_LTLIBRARIES = libxdpd_driver_example_src.la

libxdpd_driver_example_src_la_SOURCES =
libxdpd_driver_example_src_la_LIBADD = \
		hal-imp/libxdpd_driver_example_hal_imp.la\
		pipeline-imp/libxdpd_driver_example_pipeline_imp.la 
